# flask-project

./: .coverage  Dockerfile  README.md  app.py  conftest.py  db.py  pyproject.toml
routes/: animal_routes.py  employee_routes.py
services/: animal_service.py  employee_service.py
tests/: test_animal_routes.py  test_animal_service.py  test_employee_routes.py  test_employee_service.py
