[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["FabianusArdian <fabianusardianu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flasgger = "^0.9.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
